# PyDelphiAST

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/pydelphiast/: __init__.py  __main__.py  errors.py  lexer.py  project.py  tokens.py
src/pydelphiast/parsers/: __init__.py  base.py  dfm_parser.py  groupproj_parser.py  pas_parser.py
tests/: test_lexer.py  test_parser.py
tests/fixtures/: form.dfm  project.dpr  simple.pas
