[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydelphiast"
version = "0.1.0"
description = "Delphi source code parser and AST/JSON generator for .pas, .dpr, .dfm and .groupproj files"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["delphi", "pascal", "parser", "ast"]

[project.scripts]
pydelphiast = "pydelphiast.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
